<resources>
    <string name="app_name">Carros </string>

    <!-- A -->
    Atualizar
    <string name="atualizar">Atualizar</string>
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>

    <string name="about_dialog_text">

<!--
<![CDATA[
<b>Aplicativo dos Carros 2015</b><br>
Versao %s<br><br>
<a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
<a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
	]]> -->

        <![CDATA[
<b>Galeria de Carros</b><br>
Versao %s<br><br>
<a href="http://www.google.com.br"> http://www.google.com.br</a><br><br>
<b>Júnior Carvalho</b>
<br><br>
]]>

	</string>
    <string name="about_dialog_title">Informações</string>

    <!-- C -->
    <string name="carros">Carros</string>
    <string name="configuracoes">Configurações</string>
    <string name="classicos">Clássicoss</string>
    <string name="chave_backup">AEdPqrEAAAAI6f48sFslxkyPhTyZ1QzbbeLFb6V4uN-41gk-fQ</string>


    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>


    <!-- L -->
    <string name="luxo">Luxo</string>
    <string name="latitudeLongitude">Lat / Lng</string>
    <string name="leitor_codigo_barras">Leitor código barras</string>

    <!-- M -->
    <string name="mapa">Mapa</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões!</string>

    <!-- menu_frag_mapa.xml -->
    <string name="mapa_normal">Modo Normal</string>
    <string name="mapa_satelite">Modo Satélite</string>
    <string name="mapa_terreno">Modo Terreno</string>
    <string name="mapa_hibrido">Modo Híbrido</string>
    <string name="mapa_location_directions">Direções</string>
    <string name="mapa_location_carro">Localização do Carro</string>
    <string name="mapa_zoom_in">Zoom (+)</string>
    <string name="mapa_zoom_out">Zoom (-)</string>


    <!-- N -->
    <string name="nav_drawer_username">Júnior Carvalho</string>
    <string name="nav_drawer_email">jcarvalho.junior@hotmail.com</string>
    <string name="nome">Nome</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="sobre">Sobre</string>
    <string name="site_do_livro">Site</string>
    <string name="sobre_aparelho">Sobre aparelho</string>
    <string name="sair">Sair</string>
    <string name="share">Share</string>
    <string name="scan">Scan</string>

    <!-- T -->
    <string name="type_network">Tipo de conexão</string>


    <!-- B -->
    <string name="check_batpercent">Percentual bateria</string>


    <!-- V -->
    <string name="vazio" />
    <string name="video">Vídeo</string>

    <string name="action_video_browser">Browser</string>
    <string name="action_video_player">Vídeo Player</string>
    <string name="action_video_videoview">VídeoView</string>


    <!-- TODO: Remover ou Alterar PlaceHolder text -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="tittle_activity_carro">Carro</string>
    <string name="hello_world">Hello Word</string>
    <string name="tittle_activity_teste">Teste Activity</string>


    <!--******************************** LISTA DE PERMISSOES ********************************-->
    <string name="INTERNET">android.permission.INTERNET</string>
    <string name="ACCESS_NETWORK_STATE">android.permission.ACCESS_NETWORK_STATE</string>
    <string name="WRITE_EXTERNAL_STORAGE">android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="READ_EXTERNAL_STORAGE">android.permission.READ_EXTERNAL_STORAGE</string>
    <string name="CAMERA">android.permission.CAMERA</string>
    <string name="READ_CALENDAR">android.permission.READ_CALENDAR</string>
    <string name="ACCESS_FINE_LOCATION">android.permission.ACCESS_FINE_LOCATION</string>
    <string name="READ_CONTACTS">android.permission.READ_CONTACTS</string>
    <string name="EDITAR_CONFIGURACAO_ANDROID">android.permission.WRITE_SETTINGS</string>
    <string name="TIPOCONEXAOINTERNET">android.permission.ACCESS_NETWORK_STATE</string>

    <string name="GPSCOARSELOCALIZACAO">android:name="android.permission.ACCESS_COARSE_LOCATION</string>
    <string name="GPSFINELOCALIZACAO">android:name="android.permission.ACCESS_FINE_LOCATION</string>



</resources>
